{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 57,
  "lineage": "28c24328-538c-8348-856a-6c9e25a7ae81",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:626614672806:targetgroup/MegaTicket-App-TG/01777d89059c8624",
            "arn_suffix": "targetgroup/MegaTicket-App-TG/01777d89059c8624",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/api/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:626614672806:targetgroup/MegaTicket-App-TG/01777d89059c8624",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "MegaTicket-App-TG",
            "port": 3001,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "MegaTicket-App-TG"
            },
            "tags_all": {
              "Environment": "test",
              "ManagedBy": "Terraform",
              "Name": "MegaTicket-App-TG",
              "Project": "MegaTicket"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0145fa8049e248111"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_nlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:626614672806:targetgroup/MegaTicket-App-NLB-TG/adae29460af1ea27",
            "arn_suffix": "targetgroup/MegaTicket-App-NLB-TG/adae29460af1ea27",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:626614672806:targetgroup/MegaTicket-App-NLB-TG/adae29460af1ea27",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "MegaTicket-App-NLB-TG",
            "port": 3001,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "MegaTicket-App-NLB-TG"
            },
            "tags_all": {
              "Environment": "test",
              "ManagedBy": "Terraform",
              "Name": "MegaTicket-App-NLB-TG",
              "Project": "MegaTicket"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0145fa8049e248111"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:626614672806:security-group/sg-096023d2ec750b1aa",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-096023d2ec750b1aa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "MegaTicket-ALB-SG",
            "name_prefix": "",
            "owner_id": "626614672806",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "MegaTicket-ALB-SG"
            },
            "tags_all": {
              "Environment": "test",
              "ManagedBy": "Terraform",
              "Name": "MegaTicket-ALB-SG",
              "Project": "MegaTicket"
            },
            "timeouts": null,
            "vpc_id": "vpc-0145fa8049e248111"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:626614672806:security-group/sg-08b1dc1a832027e61",
            "description": "Security group for App instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08b1dc1a832027e61",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "API Port from NLB (VPC CIDR)",
                "from_port": 3001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3001
              },
              {
                "cidr_blocks": [],
                "description": "API Port from ALB",
                "from_port": 3001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-096023d2ec750b1aa"
                ],
                "self": false,
                "to_port": 3001
              },
              {
                "cidr_blocks": [],
                "description": "API Port from Web instances",
                "from_port": 3001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0743bc15009be3c8f"
                ],
                "self": false,
                "to_port": 3001
              }
            ],
            "name": "MegaTicket-App-SG",
            "name_prefix": "",
            "owner_id": "626614672806",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "MegaTicket-App-SG"
            },
            "tags_all": {
              "Environment": "test",
              "ManagedBy": "Terraform",
              "Name": "MegaTicket-App-SG",
              "Project": "MegaTicket"
            },
            "timeouts": null,
            "vpc_id": "vpc-0145fa8049e248111"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.web",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:626614672806:security-group/sg-0743bc15009be3c8f",
            "description": "Security group for Web instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0743bc15009be3c8f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Web Port from ALB",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-096023d2ec750b1aa"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "MegaTicket-Web-SG",
            "name_prefix": "",
            "owner_id": "626614672806",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "MegaTicket-Web-SG"
            },
            "tags_all": {
              "Environment": "test",
              "ManagedBy": "Terraform",
              "Name": "MegaTicket-Web-SG",
              "Project": "MegaTicket"
            },
            "timeouts": null,
            "vpc_id": "vpc-0145fa8049e248111"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:626614672806:subnet/subnet-0bf96784447d3cc1d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bf96784447d3cc1d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "626614672806",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "MegaTicket-Private-Subnet-A",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "test",
              "ManagedBy": "Terraform",
              "Name": "MegaTicket-Private-Subnet-A",
              "Project": "MegaTicket",
              "Type": "Private"
            },
            "vpc_id": "vpc-0145fa8049e248111"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:626614672806:subnet/subnet-08dd158686d6ce2fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08dd158686d6ce2fb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "626614672806",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "MegaTicket-Private-Subnet-C",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "test",
              "ManagedBy": "Terraform",
              "Name": "MegaTicket-Private-Subnet-C",
              "Project": "MegaTicket",
              "Type": "Private"
            },
            "vpc_id": "vpc-0145fa8049e248111"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:626614672806:vpc/vpc-0145fa8049e248111",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-064be9e76b7ce918f",
            "default_route_table_id": "rtb-09d02b7bf28408e57",
            "default_security_group_id": "sg-0b18d36be4c459b48",
            "dhcp_options_id": "dopt-092b09ae5a3cf24b9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0145fa8049e248111",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09d02b7bf28408e57",
            "owner_id": "626614672806",
            "tags": {
              "Name": "MegaTicket-VPC"
            },
            "tags_all": {
              "Environment": "test",
              "ManagedBy": "Terraform",
              "Name": "MegaTicket-VPC",
              "Project": "MegaTicket"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}